# farp

./: .gitignore  .golangci.yml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  FILES_CREATED.txt  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARKS  errors.go  errors_test.go  go.mod  manifest.go  manifest_test.go  provider.go  provider_test.go  registry.go  storage.go  storage_test.go  types.go  types_test.go  types_test_additions.go  version.go  version_test.go
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: badges.yml  ci.yml  codeql.yml  release.yml
docs/: ARCHITECTURE.md  GATEWAY_DISCOVERY_EXAMPLES.md  GITHUB_SETUP.md  IMPLEMENTATION_RESPONSIBILITIES.md  MDNS_SERVICE_TYPE_GUIDE.md  QUICK_START_CI.md  RELEASE_PROCESS.md  SPECIFICATION.md
examples/basic/: main.go
examples/composition/: README.md  main.go
examples/mixed-routing/: README.md  main.go
examples/security-merge/: README.md  main.go
farp-rust/: Cargo.toml  README.md
farp-rust/examples/: basic.rs  merger.rs
farp-rust/src/: errors.rs  lib.rs  manifest.rs  provider.rs  storage.rs  types.rs  version.rs
farp-rust/src/gateway/: client.rs  mod.rs
farp-rust/src/merger/: asyncapi.rs  grpc.rs  mod.rs  openapi.rs  orpc.rs  types.rs
farp-rust/src/providers/: asyncapi.rs  avro.rs  graphql.rs  grpc.rs  mod.rs  openapi.rs  orpc.rs  thrift.rs
farp-rust/src/registry/: memory.rs  mod.rs
farp-rust/tests/: integration_tests.rs  merger_tests.rs
gateway/: client.go  client_merger_test.go  client_test.go
merger/: asyncapi.go  grpc.go  merger.go  merger_test.go  multi.go  openapi.go  orpc.go  security.go
providers/asyncapi/: forge_integration.go  forge_integration_test.go  provider.go  provider_test.go
providers/avro/: provider.go  provider_test.go
providers/graphql/: provider.go  provider_test.go
providers/grpc/: provider.go  provider_test.go
providers/openapi/: forge_integration.go  forge_integration_test.go  provider.go  provider_test.go
providers/orpc/: provider.go  provider_test.go
providers/thrift/: provider.go  provider_test.go
registry/memory/: registry.go  registry_test.go
scripts/: update-version.sh
